Fixed demo link alignment

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,10 @@ h4 {
     width: 48%;
 }
 
+#demoLink {
+    text-align: center !important;
+}
+
 #footerTable {
     margin: 0 auto 20px;
     width: 450px;
